# wikicorpus

./: .gitignore  COPYING  COPYING.LESSER  README.rst  config.py  data.py  extract.py  pyproject.toml
tests/: test_wikicorpus.py
wikicorpus/: __init__.py  data.py  utils.py
