[tool.poetry]
name = "WikiCorpus"
version = "0.1.0"
description = "tools to extract and analyze data from Wikimedia projects"
authors = ["Iván Hernández Cazorla <ivan@ivanhercaz.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pywikibot = "^3.0.20200405"
pandas = "^1.0.3"
mwparserfromhell = "^0.5.4"
beautifulsoup4 = "^4.9.0"
wasabi = "^0.6.0"
inquirer = "^2.6.3"
selenium = "^3.141.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
